small fixes in the style

--- a/index.html
+++ b/index.html
@@ -9,56 +9,44 @@
 <body>
     <header>
         <figure>
-            <img src="./img/cancer-de-mama 1.png" alt="Mulher com touca e fita rosa de conscientização do câncer de mama"/>
+            <img src="./img/logo-header.png" alt="Mulher com touca e fita rosa de conscientização do câncer de mama"/>
             <figcaption>OUTUBRO ROSA</figcaption>
         </figure>
         <nav class="menu">
             <ul>
-                <li>SOBRE</li>
-                <li>CONSCIENTIZAÇÃO</li>
-                <li>DICAS</li>
+                <li><a href="#sobre">SOBRE</a></li>
+                <li><a href="#conscientizacao">CONSCIENTIZAÇÃO</a></li>
+                <li><a href="#dicas">DICAS</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <section class="firstSection">
-            <div>
-                <p>
-                    Outubro Rosa alerta sobre prevenção e diagnóstico<br>
-                    precoce do câncer de mama. O mês de Outubro já é<br>
-                    conhecido mundialmente como um mês marcado<br>
-                    por ações afirmativas relacionadas à prevenção e<br>
-                    diagnóstico precoce do câncer de mama. O<br>
-                    movimento, conhecido como Outubro Rosa,<br>
-                    é celebrado anualmente desde os anos 90.
-                </p>
-            </div>
-            <img src="./img/Voce-sabe-o-que-e-outubro-rosa 1.png" alt="Pessoas segurando fita rosa de conscientização do câncer de mama">
+        <section id="sobre" class="firstSection">
+            <p>
+                Outubro Rosa alerta sobre prevenção e diagnóstico precoce do câncer de mama. O mês de Outubro já é conhecido mundialmente como um mês marcado por ações afirmativas relacionadas à prevenção e diagnóstico precoce do câncer de mama. O movimento, conhecido como Outubro Rosa, é celebrado anualmente desde os anos 90.
+            </p>
+            <img src="./img/img-1-main.png" alt="Pessoas segurando fita rosa de conscientização do câncer de mama">
         </section>
-        <section class="secondSection">
-            <img src="./img/3d361f1e-37ee-4a0b-a2b1-511fcab9f666 1.png" alt="Pessoas caminhando na rua com roupa rosa">
-            <div>
-                <p>
-                    Outubro Rosa promove a conscientização sobre o câncer<br>
-                    de mama com corridas e caminhadas. Esses eventos<br>
-                    incentivam a prevenção e o diagnóstico precoce, reunindo<br>
-                    pessoas em apoio à causa. Participantes vestem rosa e<br>
-                    percorrem distâncias variadas.
-                </p>
-            </div>
+        <section id="conscientizacao" class="secondSection">
+            <img src="./img/img-2-main.png" alt="Pessoas caminhando na rua com roupa rosa">
+            <p>
+                Outubro Rosa promove a conscientização sobre o câncer de mama com corridas e caminhadas. Esses eventos incentivam a prevenção e o diagnóstico precoce, reunindo pessoas em apoio à causa. Participantes vestem rosa e percorrem distâncias variadas.
+            </p>
         </section>
-        <section class="thirdSection">
-            <img src="./img/imagemMamografia 1.png" alt="Ilustração de uma mulher realizando uma mamografia em uma máquina médica">
-            <img src="./img/imagemAlimentaçãoSaudável 1.png" alt="Ilustração de uma mulher segurando uma cesta de alimentos saudáveis">
-            <img src="./img/imagemConsultaMedica 1.png" alt="Ilustração de uma médica atendendo uma paciente">
-            <img src="./img/imagemProibidoBebereFumar 1.png" alt="Ilustração de um símbolo de proibição de bebidas alcoólicas e cigarros">
+        <section id="dicas" class="thirdSection">
+            <img src="./img/img-mamografia.png" alt="Ilustração de uma mulher realizando uma mamografia em uma máquina médica">
+            <img src="./img/img-alimentacao-saudavel.png" alt="Ilustração de uma mulher segurando uma cesta de alimentos saudáveis">
+            <img src="./img/img-consulta-medica.png" alt="Ilustração de uma médica atendendo uma paciente">
+            <img src="./img/img-proibido.png" alt="Ilustração de um símbolo de proibição de bebidas alcoólicas e cigarros">
         </section>
     </main>
     <footer>
         <div>
-            <img src="./img/img.icons8 1.png" alt="Logo Linkedin">
-            <img src="./img/1936319 1.png" alt="Logo Instagram">
-            <img src="./img/st-github 1.png" alt="Logo Github">
+            <ul>
+                <li><a href="https://www.linkedin.com/in/mauricio-tavares-de-melo-076489230/" target="_blank"><img src="./img/logo-linkedin.png" alt="Logo Linkedin"></a></li>
+                <li><a href="https://www.instagram.com/mauricio.t.melo/" target="_blank"><img src="./img/logo-instagram.png" alt="Logo Instagram"></a></li>
+                <li><a href="https://github.com/MauricioTdM" target="_blank"><img src="./img/logo-github.png" alt="Logo Github"></a></li>
+            </ul>  
         </div>
         <div>
             <h5>Aluno: Maurício Tavares de Melo</h5>
@@ -66,7 +54,7 @@
             <h5>Facilitador(a): Marina Gomes</h5>
             <h5>Layout criado para fins de estudos na escola vai na web</h5>
         </div>
-        <img src="./img/outubro-rosa 1.png" alt="Fita rosa">
+        <img src="./img/fita-outubro-rosa-footer.png" alt="Fita rosa">
     </footer>
 </body>
 </html>
